--- a/build.xml
+++ b/build.xml
@@ -180,14 +180,14 @@
 
     <!-- Use these properties to make changing the versions of related JARs
         (see SLF4J or Logback) a bit less tedious. -->
-    <property name="slf4j.version" value="1.7.12" />
-    <property name="logback.version" value="1.1.3" />
-    <property name="miglayout.version" value="5.0" />
+    <property name="slf4j.version" value="1.7.21" />
+    <property name="logback.version" value="1.1.7" />
+    <property name="miglayout.version" value="5.1-SNAPSHOT" />
     <property name="jogamp.version" value="2.3.2" />
     <property name="swingx.version" value="1.6.5-1" />
     <property name="eventbus.version" value="1.4" />
     <property name="commons-math.version" value="3.5" />
-    <property name="rsyntaxtextarea.version" value="2.5.8" />
+    <property name="rsyntaxtextarea.version" value="2.6.0" />
     <property name="sysout.version" value="1.0.2" />
     <property name="jython.version" value="2.7.0" />
     <property name="juniversalchardet.version" value="1.0.3" />
@@ -206,6 +206,7 @@
          Note: if you're going to modify this fileset, be sure to make similar
          modifications to the "jar.base.classpath" property. -->
     <fileset id="mcv.libs" dir="${dist.dir}">
+        <!-- <include name="jansi-1.14.jar" /> -->
         <include name="commons-httpclient-3.1.jar" />
         <include name="swingx-common-${swingx.version}.jar" />
         <include name="sysout-over-slf4j-${sysout.version}.jar" />
