--- a/edu/wisc/ssec/mcidasv/resources/mcidasv.properties
+++ b/edu/wisc/ssec/mcidasv/resources/mcidasv.properties
@@ -468,4 +468,4 @@ idv.usetimedriver=true
 
 # For Request 1 of Inquiry 2013. AddeTextProductDataSource reads from the
 # "textserver" property in its "readProducts" method.
-textserver=atm.ucar.edu
+textserver=adde.ucar.edu
