--- a/edu/wisc/ssec/mcidasv/resources/version.properties
+++ b/edu/wisc/ssec/mcidasv/resources/version.properties
@@ -1,5 +1,5 @@
 mcidasv.version.major = 1
-mcidasv.version.minor = 7
-mcidasv.version.release = u1
+mcidasv.version.minor = 8
+mcidasv.version.release = beta1
 mcidasv.build.date = @DATE@ @NIGHTLY@
-mcidasv.copyright.year = 2007-2018
+mcidasv.copyright.year = 2007-2017
